# executable-epistemics

./: CITATION.cff  CONTRIBUTING.md  MANIFEST.json  README.md  pyproject.toml
docs/: CLAIM_CLASSES.md  EXP001_RUNBOOK.md  HANDOFF.md  INTERPRETATION_RULES.md  INTRO.md  PAPER_OUTLINE.md  WITNESS_PROTOCOL.md
encoders/: ENCODER_CONTRACT.md  __init__.py  ast_metrics.py  dep_graph.py  llm_embedding.py  ownership.py
examples/: quickstart.py
examples/calibration_artifacts/: CALIBRATION_RUN.json  POSITIVE_CONTROL.json  POSITIVE_CONTROL_E004.json
examples/rehearsal_artifacts/: REHEARSAL_CONCLUSION.json
mcl_runtime/: __init__.py  kernel.py  runtime.py  tools.py
results/Pillow/: ground_truth.json  score_ast_metrics.json  score_dep_graph.json  score_ownership.json
results/black/: ground_truth.json  score_ast_metrics.json  score_dep_graph.json  score_ownership.json
results/celery/: ground_truth.json  score_ast_metrics.json  score_dep_graph.json  score_ownership.json
results/click/: ground_truth.json  score_ast_metrics.json  score_dep_graph.json  score_ownership.json
results/django/: score_ast_metrics.json  score_dep_graph.json  score_ownership.json
results/fastapi/: ground_truth.json  score_ast_metrics.json  score_dep_graph.json  (+1 more)
studies/: REGISTRY.json  SYNTHESIS_EXP001_EXP002.md  SYNTHESIS_EXP003.md  SYNTHESIS_EXP004.md  SYNTHESIS_EXP005.md  SYNTHESIS_EXP101.md
tests/: test_all.py
validity_framework/: aggregate.py  corpus_builder.py  run_study.py  scorer.py
witness_core/: __init__.py  artifact.py  errata.py  provenance.py  registry.py
(+843 files in other folders)
